// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./CooldownButton.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary mui-style-wu8zzm-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span>
      Resend
    </span>
  </button>
</div>
`;

exports[`./CooldownButton.stories LongCooldown 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary mui-style-wu8zzm-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span>
      Try again
    </span>
  </button>
</div>
`;

exports[`./CooldownButton.stories StartDisabled 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary mui-style-wu8zzm-MuiButtonBase-root-MuiButton-root"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span>
      Resend code
       in 10s
    </span>
  </button>
</div>
`;
